syntax = "proto3";

package types;

option go_package = "github.com/tinyci/ci-agents/ci-gen/grpc/types";

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

// Session is a session key/value pair as well as an expiry time for the
// session. All values are encrypted with the session key.
message Session {
	string                    key       = 1; // The key
	string                    values    = 2; // The value
	google.protobuf.Timestamp expiresOn = 3; // When it expires
}
